force-app/main/default/objects/Asset_Ownership__c/Asset_Ownership__c.object-meta.xml
<CustomObject>
    <label>Asset Ownership</label>
    <pluralLabel>Asset Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Asset Ownership Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>