force-app/main/default/objects/Asset_Ownership__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asset Ownerships</relationshipLabel>
    <relationshipName>Contact_Asset_Ownerships</relationshipName>
</CustomField>