force-app/main/default/objects/Asset_Ownership__c/fields/Total_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Contribution__c</fullName>
    <label>Total Contribution</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>